--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+  <IMG src="https://plus.unsplash.com/premium_photo-1705091308398-42be44086a79?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2Mnx8fGVufDB8fHx8fA%3D%3D">
+  <h1>Arsh Ilahi</h1>
+	<a href="https://www.linkedin.com/in/arsh-ilahi-434448246/">LinkedIn</a>
+	<div id="skills">
+		<p>Java</p>
+	</div>
+	<div id="projects">
+		<ul>
+			<li>Blinkit</li>
+			<li>Amazon</li>
+			<li>Counter</li>
+		</ul>
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
